feat:implement supabase workflow
