# src/routes/authRoutes.js
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import { login, logout, signup } from '../controllers/authController.js';
+import { authMiddleware } from '../middleware/authMiddleware.js';
+import { asyncHandler } from '../utils/asyncHandler.js';
+
+const router = Router();
+
+router.post('/signup', asyncHandler(signup));
+router.post('/login', asyncHandler(login));
+router.post('/logout', authMiddleware, asyncHandler(logout));
+
+export { router as authRouter };
