# src/routes/publicRoutes.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { info } from '../controllers/publicController.js';
+
+const router = Router();
+
+router.get('/info', info);
+
+export { router as publicRouter };
